--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <title>Rock Paper Scissor</title>
     <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
+    <script src="script.js" async></script>
 </head>
 <body>
+    <h1>Rock paper scissor game</h1>
+    <button class="startButton">Start</button>
+    <form class="chooseRounds">
+        <label for="playRounds">How many rounds would you like to play?</label>
+        <input type="number" id="playRounds" name="playRounds" min="3">
+        <button class="submitRounds">Submit</button>
+    </form>
+    <div class="theGame">
+    <h3 class="rounds"></h3>
+    <div class="resultBanner"></div>
+    <div class="gameButtons">
+        <button id="rock">Rock</button>
+        <button id="paper">Paper</button>
+        <button id="scissor">Scissor</button>
+    </div>
+    </div>
     
 </body>
-</html>`
+</html>
