added styling and finishing touches in the JS logic

--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <div class="gameButtons">
         <h3 class="rounds"></h3>
         <div class="resultBanner"></div>
+        <div class="buttons">
         <button id="rock">Rock</button>
         <button id="paper">Paper</button>
         <button id="scissor">Scissor</button>
+    </div>
     </div>
     </div>
     <div class="endMessage"></div>
